:tada: Finish Initial Front End Code

--- a/RecruitAdmin/statistics.html
+++ b/RecruitAdmin/statistics.html
@@ -47,84 +47,6 @@
  
     <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
     <script src="https://cdn.bootcss.com/vuetify/1.1.0-beta.0/vuetify.min.js"></script>
-
-    <script>
-        new Vue({
-            el: '#app',
-
-            data: {
-                collapsed: false,
-                loading: false,
-                header: [
-                    { text: '名称', value: 'name' },
-                    { text: '报名总人数', value: 'all' },
-                    { text: '男生', value: 'boy' },
-                    { text: '女生', value: 'girl' },
-                    { text: '第一志愿总数', value: 'fcall' },
-                    { text: '第一志愿男生', value: 'fcboy' },
-                    { text: '第一志愿女生', value: 'fcgirl' },
-                    { text: '第二志愿总数', value: 'scall' },
-                    { text: '第二志愿男生', value: 'scboy' },
-                    { text: '第二志愿女生', value: 'scgirl' }
-                ],
-                data: []
-            },
-
-            methods: {
-                toggleDepList: function () {
-                    this.collapsed = !this.collapsed;
-                    this.loading = true;
-                    if (this.collapsed) {
-                        this.data = [
-                            {
-                                name: '技术部 - 代码组',
-                                all: 1171,
-                                boy: 1983,
-                                girl: 4704,
-                                fcall: 1678,
-                                fcboy: 4700,
-                                fcgirl: 189,
-                                scall: 3415,
-                                scboy: 2164,
-                                scgirl: 922
-                            },
-                            {
-                                name: '技术部 - 设计组',
-                                all: 2643,
-                                boy: 1687,
-                                girl: 490,
-                                fcall: 3424,
-                                fcboy: 1470,
-                                fcgirl: 4203,
-                                scall: 968,
-                                scboy: 1144,
-                                scgirl: 2148
-                            }
-                        ];
-                    } else {
-                        this.data = [
-                            {
-                                name: '技术部',
-                                all: 2825,
-                                boy: 5103,
-                                girl: 888,
-                                fcall: 1263,
-                                fcboy: 4660,
-                                fcgirl: 3401,
-                                scall: 2094,
-                                scboy: 4065,
-                                scgirl: 1616
-                            }
-                        ];
-                    }
-                    this.loading = false;
-                },
-
-                jump: function () {
-                    location.href = 'data.html';
-                }
-            }
-        })
-    </script>
+    <script src="statistics.js"></script>
 </body>
 </html>
