:tada: :bookmark: Finish All Recruit Admin Pages

--- a/RecruitAdmin/statistics.html
+++ b/RecruitAdmin/statistics.html
@@ -20,11 +20,12 @@
             :headers="header"
             :items="data"
             :loading="loading"
+            disable-initial-sort
             hide-actions
             class="elevation-1">
                 <v-progress-linear slot="progress" color="blue" indeterminate></v-progress-linear>
                 <template slot="items" slot-scope="props">
-                    <td>{{ props.item.name }}</td>
+                    <td>{{ props.item.n }}</td>
                     <td>{{ props.item.all }}</td>
                     <td>{{ props.item.boy }}</td>
                     <td>{{ props.item.girl }}</td>
