:arrow_up: Optimize A UX Related Operation

--- a/RecruitAdmin/data.html
+++ b/RecruitAdmin/data.html
@@ -46,7 +46,7 @@
                         <td>{{ props.item.second }}</td>
                         <td>{{ props.item.adjust }}</td>
                         <td @click="showModel(props.item)">
-                            <a href="#">点击查看></a>
+                            <a>点击查看></a>
                         </td>
                         <td>{{ props.item.create_time }}</td>
                     </template>
