--- a/Backend Intro/index.html
+++ b/Backend Intro/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>代码组后端入门任务</title>
+    <title>代码组 · 后端入门任务</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 </head>
 
@@ -58,7 +58,7 @@
 			</div>
 		</div>
     </div>
-    
+
     <script src="task.js"></script>
 </body>
 </html>
