:fire: Replace All BootCDN Links

--- a/RecruitAdmin/data.html
+++ b/RecruitAdmin/data.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>报名数据</title>
-    <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/vuetify/1.1.0-beta.0/vuetify.min.css" rel="stylesheet">
+    <link href="https://cdnjs.loli.net/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.loli.net/ajax/libs/vuetify/1.1.0-beta.0/vuetify.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -100,8 +100,8 @@
         </v-app>
     </div>
 
-    <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
-    <script src="https://cdn.bootcss.com/vuetify/1.1.0-beta.0/vuetify.min.js"></script>
+    <script src="https://cdnjs.loli.net/ajax/libs/vue/2.5.16/vue.min.js"></script>
+    <script src="https://cdnjs.loli.net/ajax/libs/vuetify/1.1.0-beta.0/vuetify.min.js"></script>
     <script src="data.js"></script>
 </body>
 </html>
