--- a/ResetPwd/index.html
+++ b/ResetPwd/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.loli.net/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <title>密码重置</title>
 </head>
 
